[gd_scene load_steps=13 format=2]

[ext_resource path="res://entities/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tilesets/background.tres" type="TileSet" id=2]
[ext_resource path="res://assets/tilesets/props.tres" type="TileSet" id=3]
[ext_resource path="res://scripts/FightStage.gd" type="Script" id=4]
[ext_resource path="res://assets/fonts/mainFont.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/audio/finishFight.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/tilesets/background.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/noExit.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 7 )
region = Rect2( 224, 0, 32, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34, 34 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 32 )

[sub_resource type="Animation" id=1]
resource_name = "showFightText"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/FightText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00277556, 0.0360823, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/FightText:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( -0.0638378, 0.7, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="FightStage" type="Node2D"]
script = ExtResource( 4 )

[node name="Navigation2D" type="Navigation2D" parent="."]

[node name="Background-noaccess" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
show_collision = true
collision_layer = 2
collision_mask = 2
format = 1

[node name="Background" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 2 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1

[node name="Reward" type="Node2D" parent="Navigation2D"]

[node name="RewardPosition" type="Position2D" parent="Navigation2D/Reward"]

[node name="Props" type="TileMap" parent="Navigation2D"]
tile_set = ExtResource( 3 )
cell_size = Vector2( 32, 32 )
show_collision = true
format = 1

[node name="SpawnPositions" type="Node2D" parent="Navigation2D"]

[node name="Exit" type="Area2D" parent="Navigation2D"]
collision_layer = 0
collision_mask = 4

[node name="Sprite" type="Sprite" parent="Navigation2D/Exit"]
scale = Vector2( 2, 2 )
texture = SubResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation2D/Exit"]
shape = SubResource( 2 )

[node name="ExitBlocker" type="Sprite" parent="Navigation2D/Exit"]
texture = ExtResource( 8 )

[node name="StaticBody2D" type="StaticBody2D" parent="Navigation2D/Exit"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Navigation2D/Exit/StaticBody2D"]
shape = SubResource( 4 )

[node name="Player" parent="Navigation2D" instance=ExtResource( 1 )]
position = Vector2( 34, 36 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FightText" type="Label" parent="CanvasLayer"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -7.0
margin_right = 512.0
margin_bottom = 7.0
custom_colors/font_color = Color( 1, 0.352941, 0.352941, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Start Fight"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/showFightText = SubResource( 1 )

[node name="finishAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Effects"

[connection signal="body_entered" from="Navigation2D/Exit" to="." method="_on_Exit_body_entered"]
